tasks - check credentials, deleteTask, verizon fixes
