# node-api/src/main/java/org/ecloudmanager/node/model/SecretKey.java
@@ -1,5 +1,7 @@
 package org.ecloudmanager.node.model;
 
+import java.util.Objects;
+
 public class SecretKey implements Credentials {
 
     private String name;
@@ -28,4 +30,24 @@ public class SecretKey implements Credentials {
     public void setSecret(String secret) {
         this.secret = secret;
     }
+
+    @Override
+    public boolean equals(java.lang.Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        SecretKey sk = (SecretKey) o;
+        return Objects.equals(this.name, sk.name) &&
+                Objects.equals(this.secret, sk.secret);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name, secret);
+    }
+
+
 }
