# node-api/src/main/resources/swagger/swagger.yaml
@@ -99,6 +99,14 @@
         produces:
         - application/json
         parameters:
+        - name: accessKey
+          in: header
+          required: true
+          type: string
+        - name: secretKey
+          in: header
+          required: true
+          type: string
         - name: taskId
           in: path
           description: ID of task to return
@@ -113,8 +121,36 @@
             description: Invalid ID
           404:
             description: Task not found
-        security:
-        - key: []
+      delete:
+        tags:
+        - tasks
+        summary: Delete task
+        operationId: deleteTask
+        produces:
+        - application/json
+        parameters:
+        - name: accessKey
+          in: header
+          required: true
+          type: string
+        - name: secretKey
+          in: header
+          required: true
+          type: string
+        - name: taskId
+          in: path
+          description: ID of task to delete
+          required: true
+          type: string
+        responses:
+          200:
+            description: Successful
+            schema:
+              $ref: '#/definitions/TaskInfo'
+          400:
+            description: Invalid ID
+          404:
+            description: Task not found
     /task/{taskId}/pollLog:
       get:
         tags:
@@ -124,6 +160,14 @@
         produces:
         - application/json
         parameters:
+        - name: accessKey
+          in: header
+          required: true
+          type: string
+        - name: secretKey
+          in: header
+          required: true
+          type: string
         - name: taskId
           in: path
           description: ID of task to return
@@ -163,7 +207,7 @@
           schema:
             $ref: '#/definitions/Node'
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string              
@@ -228,7 +272,7 @@
           schema:
             $ref: '#/definitions/Node'
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string              
@@ -255,7 +299,7 @@
           required: true
           type: string
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string              
@@ -317,7 +361,7 @@
           schema:
             $ref: '#/definitions/FirewallUpdate'
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string
@@ -397,7 +441,7 @@
           in: formData
           type: file
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string
@@ -431,7 +475,7 @@
           schema:
             $ref: '#/definitions/Command'
         responses:
-          200:
+          202:
             description: Task id
             schema:
               type: string
